# pacfix-python

./: README.md  pyproject.toml
examples/example01/: prog.py
examples/example01/mem/neg/: crash_7.txt
examples/example01/mem/pos/: output_0.txt  output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_8.txt  output_9.txt
examples/example06/: test.py
src/: invariant.py  main.py  synthesis.py  utils.py
src/pacfix/: __init__.py  __main__.py  invariant.py  utils.py
